Move Children to Directory instead of Node.
Entails removing AbstractTree.